--- a/lesson10/gallery-7.html
+++ b/lesson10/gallery-7.html
@@ -29,7 +29,7 @@
         <nav>
             <ul id="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="preston-6.html">Preston</a></li>
+                <li><a href="preston-10.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
@@ -95,8 +95,7 @@
         </main>
 
         <footer>
-            <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span
-                    id="modified-date"></span></div>
+            <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
         <script src="js/scripts.js" defer></script>
@@ -109,7 +108,9 @@
                     families: ['Open Sans', 'Roboto']
                 }
             });
+
         </script>
 
     </body>
+
 </html>
