--- a/lesson10/thanks.html
+++ b/lesson10/thanks.html
@@ -29,11 +29,11 @@
         <nav>
             <ul id="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Preston</a></li>
+                <li><a href="preston-10.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="#">Storm Center</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a class="active" href="stormcenter.html">Storm Center</a></li>
+                <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
         </nav>
 
@@ -44,8 +44,7 @@
         </main>
 
         <footer>
-            <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span
-                    id="modified-date"></span></div>
+            <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
         <script src="js/scripts.js" defer></script>
@@ -57,6 +56,7 @@
                     families: ['Open Sans', 'Roboto']
                 }
             });
+
         </script>
 
     </body>
