--- a/index.html
+++ b/index.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Assignment portal for Lehi Sanchez in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <link rel="shortcut icon" href="favicon.ico">
-  <title>Lehi Sanchez | WDD-230 Assignment Portal</title>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Assignment portal for Lehi Sanchez in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+        <link rel="shortcut icon" href="favicon.ico">
+        <title>Lehi Sanchez | WDD-230 Assignment Portal</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/medium.css">
-</head>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/medium.css">
+    </head>
 
-<body>
+    <body>
 
-  <header>
-    <h1>Lehi Sanchez</h1>
-    <img src="images/portrait.jpg" alt="Portrait of Lehi Sanchez">
-  </header>
+        <header>
+            <h1>Lehi Sanchez</h1>
+            <img src="images/portrait.jpg" alt="Portrait of Lehi Sanchez">
+        </header>
 
-  <main>
-    <h2>WDD-230: Assignment Portal</h2>
-    <ul>
-      <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-      <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
-      <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
-      <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page Continued</a></li>
-      <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
-      <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
-      <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
-      <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center Form</a></li>
-      <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a> | <a href="lesson9-weather/index.html">Weather Site Homepage</a></li>
+        <main>
+            <h2>WDD-230: Assignment Portal</h2>
+            <ul>
+                <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
+                <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
+                <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page Continued</a></li>
+                <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
+                <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
+                <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
+                <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center Form</a></li>
+                <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a> | <a href="lesson9-weather/index.html">Weather Site Homepage</a></li>
+                <li>Lesson 10: <a href="lesson10/index.html">Weather API</a>
+            </ul>
+        </main>
 
-    </ul>
-  </main>
+        <footer>
+            <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+            <div class="updated">Last updated: <span id="modified-date"></span></div>
+        </footer>
 
-  <footer>
-    <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
-    <div class="updated">Last updated: <span id="modified-date"></span></div>
-  </footer>
+        <script src="js/main.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>
+            WebFont.load({
+                google: {
+                    families: [
+                        'Lora'
+                    ]
+                }
+            });
 
-  <script src="js/main.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: [
-          'Lora'
-        ]
-      }
-    });
-  </script>
-</body>
+        </script>
+    </body>
 
 </html>
