--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -61,7 +61,7 @@
                     <p>1234 Acme Weather Lane<br>Boise, Idaho</p>
                     <p>contact@weatherbee.org</p>
                 </div>
-                <img src="images/map.png" alt="map">
+                <img src="images/map.jpg" alt="map">
             </section>
         </main>
 
