--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -44,9 +44,9 @@
             <section id="hero">
 
                 <picture>
-                    <source media="(min-width: 1200px)" srcset="images/Hero_Image_1100.jpg">
-                    <source media="(min-width: 800px)" srcset="images/Hero_Image_800.jpg">
-                    <img src="images/Hero_Image_500.jpg" alt="Scenic view of sunrise.">
+                    <source media="(min-width: 1200px)" srcset="images/Hero_Preston_Image_1200.jpg">
+                    <source media="(min-width: 800px)" srcset="images/Hero_Preston_Image_800.jpg">
+                    <img src="images/Hero_Preston_Image_500.jpg" alt="Scenic view of sunrise.">
                 </picture>
 
                 <div id="current-temperature">
@@ -103,7 +103,7 @@
                     <p>1234 Acme Weather Lane<br>Boise, Idaho</p>
                     <p>contact@weatherbee.org</p>
                 </div>
-                <img src="images/map.png" alt="map">
+                <img src="images/map.jpg" alt="map">
             </section>
 
         </main>
