--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center Form</a></li>
                 <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a> | <a href="lesson9-weather/index.html">Weather Site Homepage</a></li>
                 <li>Lesson 10: <a href="lesson10/index.html">Weather API</a>
+                <li>Lesson 11: <a href="lesson11/index.html">The Weather Site</a>
             </ul>
         </main>
 
