--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -98,7 +98,7 @@
             <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
-        <script src="js/scripts.js" defer></script>
+        <script src="js/scripts.js"></script>
         <script src="js/gallery.js" defer></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
