--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -69,11 +69,11 @@
             <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
-        <script src="js/scripts.js" defer></script>
-        <script src="js/home.js" defer></script>
+        <script src="js/scripts.js"></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
+            getTownCards();
             WebFont.load({
                 google: {
                     families: ['Open Sans', 'Roboto']
