--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -38,7 +38,7 @@
 
         <main>
 
-            <h2>Preston Idaho</h2>
+            <h2>Preston</h2>
 
             <section id="hero">
 
@@ -111,12 +111,14 @@
             <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
         </footer>
 
-        <script src="js/scripts.js" defer></script>
-        <script src="js/weather.js"></script>
-        <script src="js/windchill.js" defer></script>
-
+        <script src="js/scripts.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
+            let cityId = 5604473;
+            getForecastByCityId(cityId);
+            getWeatherByCityId(cityId);
+            updateFooter();
+
             WebFont.load({
                 google: {
                     families: ['Open Sans', 'Roboto']
